--- a/templates/incidents/incident_list.html
+++ b/templates/incidents/incident_list.html
@@ -3,6 +3,6 @@
 {% block title %}Incidents{% endblock %}
 
 {% block content %}
-<h1 class="text-2xl font-semibold mb-4">Incidents (placeholder)</h1>
-<p class="text-gray-700">We'll build this out shortly.</p>
+<h1 class="text-2xl font-semibold mb-4">Incidents Temporary</h1>
+<p class="text-gray-700">In Progress</p>
 {% endblock %}
